Started working on generating dynamic proxies, and dealing with the interceptors for IDs the way NSubstitute does it for starters. Also working on a good solution to checking arguments passed to a mocked method.

--- a/src/Mockie/Mockie.csproj
+++ b/src/Mockie/Mockie.csproj
@@ -10,4 +10,8 @@
         <InternalsVisibleTo Include="Mockie.Test"/>
     </ItemGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="Castle.Core" Version="5.1.1" />
+	</ItemGroup>
+
 </Project>
